--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -7,6 +7,6 @@
     autocomplete="off"
     placeholder="Search images..."
   />
-  <button class="btn-search" type="submit">Search</button>
+  <button class="btn-search" type="submit"></button>
 </form>
 </div>
