--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -7,17 +7,36 @@
 }
 
 .search-form {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-}
-
-.form-input {
-  padding: 5px;
-  border-radius: 5px;
+  position: relative;
   width: 300px;
+  margin: 0 auto;
 }
-
-.btn-search {
+.form-input {
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  border: 2px solid #12128f;
   border-radius: 5px;
+  outline: none;
+  background: #F9F0DA;
+  color: #9E9C9C;
+}
+.btn-search {
+  position: absolute; 
+  top: 0;
+  right: 0px;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #F9F0DA;
+  border-radius: 0 5px 5px 0;
+  border-top: 2px solid #12128f;
+  border-bottom: 2px solid #12128f;
+  border-right: 2px solid #12128f;
+  cursor: pointer;
+}
+.btn-search:before {
+  content: "\1F50D";
+  font-family: FontAwesome;
+  font-size: 20px;
 }
