--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -28,7 +28,7 @@
   width: 42px;
   height: 42px;
   border: none;
-  background: #F9F0DA;
+  background: #e4dbc6;
   border-radius: 0 5px 5px 0;
   border-top: 2px solid #12128f;
   border-bottom: 2px solid #12128f;
