--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -19,7 +19,7 @@
   border-radius: 5px;
   outline: none;
   background: #F9F0DA;
-  color: #9E9C9C;
+  color: #5a5858;
 }
 .btn-search {
   position: absolute; 
