--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,9 +1,10 @@
 .container {
   background-color: blue;
-  position: fixed;
+  // position: fixed;
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
+  z-index: 1;
 }
 
 .search-form {
@@ -11,6 +12,7 @@
   width: 300px;
   margin: 0 auto;
 }
+
 .form-input {
   width: 100%;
   height: 42px;
@@ -21,6 +23,7 @@
   background: #F9F0DA;
   color: #5a5858;
 }
+
 .btn-search {
   position: absolute; 
   top: 0;
@@ -35,8 +38,44 @@
   border-right: 2px solid #12128f;
   cursor: pointer;
 }
+
 .btn-search:before {
   content: "\1F50D";
   font-family: FontAwesome;
   font-size: 20px;
+}
+
+.gallery {
+  margin: 20px 25px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.gallery img {
+  display: block;
+  width: 350px;
+  height: 250px;
+}
+
+.photo-card{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.info{
+  margin-left: 20px;
+}
+
+.load-more {
+  display: flex;
+  margin: 0px auto 20px;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: large;
+  color: #fff;
+  background-color: blue;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
