--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -50,7 +50,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .gallery img {
